<resources>

    <!--    App-->
    <string name="app_name">Notes++</string>

    <!--    Main Activity-->
    <string name="main_placeholder_empty_list">To add a new entry press the + button.</string>

    <!-- Note Activity (General)-->
    <string name="note_snackbar_failed_to_load">Failed to open note, creating new.</string>
    <!--    Text Note Activity-->
    <string name="text_note_top_app_bar_title">Text Note</string>
    <string name="text_note_description">Description</string>
    <string name="note_title_placeholder">Edit to add title</string>

    <!--    Image Note Activity-->
    <string name="image_note_snackbar_invalid_url">The Supplied URL is in invalid.</string>
    <!--    Buttons-->
    <string name="button_cancel">Cancel</string>
    <string name="button_no">No</string>
    <string name="button_done">Done</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_save">Save</string>
    <string name="button_add">Add</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_load_url">Load URL</string>


    <!--    Text-->
    <string name="text_more">More</string>
    <string name="text_share">Share</string>
    <string name="text_about">About</string>
    <string name="author_description">Created by Guy Tsitsiashvili</string>
    <string name="author_email" translatable="false">guygool4@gmail.com</string>
    <string name="author_phone" translatable="false">0546942199</string>
    <string name="author_github" translatable="false">https://github.com/guygool5</string>


    <string name="snackbar_failed_to_save_note">Failed to save note.</string>

    <!--    Accessibility-->
    <string name="accessibility_add_note">Add note</string>
    <string name="dialog_note_edit_title">Edit Title</string>
    <string name="text_note_delete_dialog_message">This cannot be undone. Are you sure you want to delete this note?</string>
    <string name="text_delete">Delete</string>
    <string name="image_note_top_app_bar_title">Image Note</string>
    <string name="snackbar_button_try_again">Try Again</string>
    <string name="snackbar_error_no_share">Found no app that can open this</string>
    <string name="dialog_about_calendar_reminder">Call me in a week</string>
    <string name="dialog_about_alarm_reminder">Call me in an hour</string>
    <string name="dialog_about_web_search">Find me on the internet</string>


</resources>

