<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="imageNoteModel"
            type="com.guygool5.notesplusplus.models.ImageNoteModel" />

        <variable
            name="editIconButtonModel"
            type="com.guygool5.notesplusplus.models.IconButtonModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/image_note_layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ImageNoteActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/image_note_top_app_bar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="bottom">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/image_note_toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/note_top_app_bar_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/image_note_top_app_bar_title" />
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <!--Title-->
            <LinearLayout
                android:id="@+id/image_note_layout_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Title Text-->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/image_note_title_text_id"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    isBold="@{imageNoteModel.title!=null &amp;&amp; !imageNoteModel.title.isEmpty()}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@{imageNoteModel.title==null ||imageNoteModel.title.isEmpty()?@string/note_title_placeholder:imageNoteModel.title}" />
                <!--Title Edit Icon-->
                <include
                    android:id="@+id/image_note_icon_button_edit_title_id"
                    layout="@layout/material_icon_button_flat"
                    app:iconButtonModel="@{editIconButtonModel}" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/image_note_button_take_picture_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_take_picture"
                        app:icon="@drawable/ic_baseline_camera_alt_24" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/image_note_button_load_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_load_url"
                        app:icon="@drawable/ic_baseline_get_app_24" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image_note_image_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    bitmap="@{imageNoteModel.bitmap.currentImage}"
                    android:contentDescription="TODO" />

            </LinearLayout>
            <!--    Buttons Container-->
            <LinearLayout
                android:id="@+id/image_note_layout_button_group_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/image_note_button_cancel_id"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/button_cancel"
                    android:textColor="@color/grey_400" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/image_note_button_save_id"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/button_save" />
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>