<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="textNoteModel"
            type="com.guygool5.notesplusplus.models.TextNoteModel" />

        <variable
            name="editIconButtonModel"
            type="com.guygool5.notesplusplus.models.IconButtonModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/new_note_layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.TextNoteActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/note_topAppBar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="bottom">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/note_toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/text_note_top_app_bar_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/text_note_top_app_bar_title" />
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <!--Title-->
            <LinearLayout
                android:id="@+id/note_layout_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Title Text-->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/note_text_title_id"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    isBold="@{textNoteModel.title!=null &amp;&amp; !textNoteModel.title.isEmpty()}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@{textNoteModel.title==null ||textNoteModel.title.isEmpty()?@string/text_note_title_placeholder:textNoteModel.title}" />
                <!--Title Edit Icon-->
                <include
                    android:id="@+id/note_icon_button_edit_title_id"
                    layout="@layout/material_icon_button_flat"
                    app:iconButtonModel="@{editIconButtonModel}" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_note_layout_description_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/text_note_description"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_description_edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={textNoteModel.text}"
                    android:gravity="top" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--    Buttons Container-->
            <LinearLayout
                android:id="@+id/note_layout_button_group_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/note_button_cancel_id"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/button_cancel"
                    android:textColor="@color/grey_400" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/note_button_add_id"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/button_save" />
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>